--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
   "functions": {
-    "api/**/*.js": {
+    "api/chat.js": {
       "memory": 1024,
       "maxDuration": 10
     }
-  },
-  "env": {
-    "GEMINI_API_KEY": "@gemini-api-key"
   }
 }
